# saas-analytics

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts  types.ts
dashboard/src/canvas/: CanvasPanel.tsx  CanvasRegistry.tsx  parseCanvas.ts
dashboard/src/components/: ChatMessage.tsx  ChatSidebar.tsx  Layout.tsx  ProtectedRoute.tsx  Sidebar.tsx  StatCard.tsx
dashboard/src/components/ui/: badge.tsx  button.tsx  card.tsx  select.tsx  textarea.tsx
dashboard/src/contexts/: AuthContext.tsx  ChatStreamingContext.tsx
dashboard/src/hooks/: useApi.ts  useCanvasStore.ts  useStreamingChat.ts
dashboard/src/pages/: AccountPage.tsx  ActivityPage.tsx  ChatPage.tsx  CostsPage.tsx  InvoicesPage.tsx  LoginPage.tsx  OverviewPage.tsx  SettingsPage.tsx  SubscriptionsPage.tsx  UsersPage.tsx
src/auth/: dependencies.py  security.py
src/chat/: answerer.py  schemas.py
src/core/: agent_factory.py  main.py  runner.py  seed.py
src/core/routes/: auth.py  chat.py  metrics.py  overview.py  settings.py
src/database/: db.py  models.py
src/prompts/: answer_question.md  system.md
src/prompts/db_context/: servicepay_schema.md
src/tools/: condopay_mysql.py
src/utils/: prompt_loader.py  secrets.py  settings.py
